# pixeditor

./: .gitignore  Cargo.toml  ICONS.md  README.md  TODO.md
src/: .canvas.rs.swp  canvas.rs  canvas_misc.rs  icons.rs  layers.rs  main.rs  project.rs  tool_helper.rs  ui.rs  undo_redo.rs
