[package]
name = "pixeditor"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.16"
egui = "0.21.0" # Update after egui-macroquad gets updated
egui-macroquad = "0.14"
egui-miniquad = "0.14.0"
enum-iterator = "1.4.1"
image = "0.24.7"
macroquad = {version="0.3.25"} # Cannot use latest because egui-macroquad isnt updated :( 
native-dialog = "0.7.0"
rusttype = "0.9.3"
